Movement validation, exceptions, sources, controller class